# TheWitnessSolver

./: .gitignore  .ocamlformat  TheWitnessSolver.opam  dune-project
lib/: coords.ml  coords.mli  definition.mli  dune  log.ml  offset.ml  offset.mli  offsetSet.ml  offsetSet.mli  property.ml  puzzle.ml  puzzle.mli  rawLexer.mll  rawParser.mly  rawPuzzle.ml  rawPuzzle.mli  rawPuzzleType.ml  renderer.ml  rule.ml  rule.mli  ruleLexer.mll  ruleParser.mly  ruleType.ml  theWitness.ml
lib/defs/: color.mli  coord.ml  coord.mli  coordMap.ml  coordMap.mli  coordSet.ml  coordSet.mli  coords.ml  coords.mli  dune  edge.ml  edge.mli  edges.ml  edges.mli  graph.ml  graph.mli  property.mli  propertySet.ml  propertySet.mli  rotation.mli  set.ml  set.mli  shape.ml  shape.mli  symbol.ml  symbol.mli
lib/log/: dune  log.ml  log.mli
lib/log_ppx/: dune  log_ppx.ml
lib/logic/: dune  logic.ml
lib/msg/: dune  msg.ml  msg.mli
lib/puzzle/: dune  offset.mli  puzzle.ml  puzzle.mli  validate.ml_ignore
lib/raw/: assignment.ml  assignment.mli  dune  lexer.mll  parser.mly  parserTypes.mli  path.ml  path.mli  raw.ml  raw.mli  rule.ml  ruleLexer.mll  ruleParser.mly  ruleType.mli
lib/render/: dune  render.ml  style.ml
lib/solver/: backend.mli  dune  logic.ml  logic.mli  problem.ml  problem.mli  solver.mli  z3Backend.ml  z3Backend.mli
puzzles/: castle  glass_factory  keep  meadow_poplar  quarry  start_castle  symmetry_island  village  white_hut  wood_factory
test/: dune
test/log_ppx/: dune  test.expected.ml  test.ml
